--- a/client/src/CSS/Contact.css
+++ b/client/src/CSS/Contact.css
@@ -226,6 +226,7 @@
         padding-bottom: 5%;
         margin-left: 5%;
         font-weight: bold;
+        font-size: 90%;
     }
 
     .contact-direct-header {
@@ -233,7 +234,7 @@
         padding-bottom: 5%;
         margin-left: 5%;
         font-weight: bold;
-
+        font-size: 90%;
         color: black;
     }
 
