--- a/client/src/CSS/LocalArticles.css
+++ b/client/src/CSS/LocalArticles.css
@@ -1,102 +1,212 @@
-.localArticles-wrapper {
-    width: 100%;
+@media only screen and (min-width: 421px) {
+
+    .localArticles-wrapper {
+        width: 100%;
+    }
+
+    .localArticles-flexer {
+        display: flex;
+
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+        background-color: white;
+
+
+    }
+
+    .localArticles-searchbar {
+        background-color: maroon;
+        height: 50px;
+        width: 100%;
+        text-align: center;
+        margin: 0 auto;
+
+        padding-top: 2%;
+        color: white;
+        font-size: 125%;
+
+
+    }
+
+    .localArticles-searchbar input {
+        margin-left: 1%;
+    }
+
+    .localArticles-cards {
+        padding: 1%;
+        border-width: 2px;
+        border-style: solid;
+        border-color: pink;
+        background-color: white;
+    }
+
+    .localArticles-header {
+        width: 100%;
+        height: 100%;
+
+        height: auto;
+        padding: 1%;
+        text-align: center;
+        font-size: 125%;
+        font-weight: bold;
+
+
+    }
+
+    .localArticles-chapeau {
+        width: 100%;
+        height: 100%;
+
+        height: auto;
+        padding: 1%;
+        text-align: center;
+
+        font-style: italic;
+
+
+    }
+
+    .localArticles-flexer img {
+        width: 100%;
+        height: 100%;
+        max-width: 650px;
+        height: auto;
+        padding: 1%;
+
+    }
+
+    .localarticles-no-articles {
+        height: 100vh;
+        background-color: teal;
+        width: 100%;
+
+    }
+
+    .localarticles-no-articles-text {
+        text-align: center;
+        color: white;
+        font-size: 300%;
+        margin-top: 20%;
+        font-weight: bold;
+    }
+
+
+
+    .localArticles-selectbar {
+        display: inline;
+        margin-left: 2%;
+    }
+
+    .localArticles-selectbar select {
+        margin-left: 0.5%;
+    }
 }
 
-.localArticles-flexer {
-    display: flex;
-
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    background-color: white;
 
 
-}
+@media only screen and (max-width: 420px) {
 
-.localArticles-searchbar {
-    background-color: maroon;
-    height: 50px;
-    width: 100%;
-    text-align: center;
-    margin: 0 auto;
+    .localArticles-wrapper {
+        width: 100%;
+    }
 
-    padding-top: 2%;
-    color: white;
-    font-size: 125%;
+    .localArticles-flexer {
+        display: flex;
 
-
-}
-
-.localArticles-searchbar input {
-    margin-left: 1%;
-}
-
-.localArticles-cards {
-    padding: 1%;
-    border-width: 2px;
-    border-style: solid;
-    border-color: pink;
-    background-color: white;
-}
-
-.localArticles-header {
-    width: 100%;
-    height: 100%;
-
-    height: auto;
-    padding: 1%;
-    text-align: center;
-    font-size: 125%;
-    font-weight: bold;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+        background-color: white;
 
 
-}
+    }
 
-.localArticles-chapeau {
-    width: 100%;
-    height: 100%;
+    .localArticles-searchbar {
+        background-color: maroon;
+        height: 50px;
 
-    height: auto;
-    padding: 1%;
-    text-align: center;
+        width: 100%;
+        text-align: center;
+        margin: 0 auto;
 
-    font-style: italic;
-
-
-}
-
-.localArticles-flexer img {
-    width: 100%;
-    height: 100%;
-    max-width: 650px;
-    height: auto;
-    padding: 1%;
-
-}
-
-.localarticles-no-articles {
-    height: 100vh;
-    background-color: teal;
-    width: 100%;
-
-}
-
-.localarticles-no-articles-text {
-    text-align: center;
-    color: white;
-    font-size: 300%;
-    margin-top: 20%;
-    font-weight: bold;
-}
+        padding-top: 5%;
+        padding-bottom: 10%;
+        color: white;
+        font-size: 100%;
 
 
+    }
 
-.localArticles-selectbar {
-    display: inline;
-    margin-left: 2%;
-}
+    .localArticles-searchbar input {
+        margin-left: 9%;
+        width: 45%;
+    }
 
-.localArticles-selectbar select {
-    margin-left: 0.5%;
+    .localArticles-cards {
+        padding: 1%;
+        border-width: 2px;
+        border-style: solid;
+        border-color: pink;
+        background-color: white;
+    }
+
+    .localArticles-header {
+        width: 100%;
+        height: 100%;
+        height: auto;
+        padding: 1%;
+        text-align: center;
+        font-size: 65%;
+
+        font-weight: bold;
+
+    }
+
+    .localArticles-chapeau {
+        width: 100%;
+        height: 100%;
+        height: auto;
+        padding: 1%;
+        text-align: center;
+        font-style: italic;
+        font-size: 65%;
+
+    }
+
+    .localArticles-flexer img {
+        width: 100%;
+        height: 100%;
+        max-width: 650px;
+        height: auto;
+        padding: 1%;
+
+    }
+
+    .localarticles-no-articles {
+        height: 100vh;
+        background-color: teal;
+        width: 100%;
+
+    }
+
+    .localarticles-no-articles-text {
+        text-align: center;
+        color: white;
+        font-size: 200%;
+        margin-top: 20%;
+        font-weight: bold;
+    }
+
+    .localArticles-selectbar {
+        margin-top: 5%;
+        padding-bottom: 5%;
+    }
+
+    .localArticles-selectbar select {
+        margin-left: 4%;
+        width: 46%;
+    }
 }
