--- a/client/src/CSS/TennisNL.css
+++ b/client/src/CSS/TennisNL.css
@@ -1,21 +1,23 @@
-.tennisNL-wrapper {
-    background: url("../pictures/grass.jpg");
-    clear: both;
+@media only screen and (min-width: 421px) {
+
+    .tennisNL-wrapper {
+        background: url("../pictures/grass.jpg");
+        clear: both;
 
 
-}
+    }
 
-.tennisNL-information {
-    background-color: white;
-    margin-bottom: 2%;
-    padding: 1%;
-    overflow: auto;
-    font-size: 100%;
+    .tennisNL-information {
+        background-color: white;
+        margin-bottom: 2%;
+        padding: 1%;
+        overflow: auto;
+        font-size: 100%;
 
 
-}
+    }
 
-/* .tennisNL-Daan-picture {
+    /* .tennisNL-Daan-picture {
     width: 18%;
 
     float: left;
@@ -26,106 +28,218 @@
 
 
 
-.tennisNL-text {
+    .tennisNL-text {
 
-    display: block;
-    font-size: 125%;
+        display: block;
+        font-size: 125%;
 
 
 
+    }
+
+
+
+    .tennisNL-Daan-picture img {
+        border-radius: 10%;
+        width: 100%;
+
+    }
+
+    .tennisNL-articles-flexer {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
+
+
+    }
+
+    .tennisNL-cards {
+        padding: 1%;
+        border-width: 2px;
+        border-style: solid;
+        border-color: seagreen;
+        background-color: white;
+    }
+
+    .tennisNL-header {
+        width: 100%;
+        height: 100%;
+
+        height: auto;
+        padding: 1%;
+        text-align: center;
+        font-size: 125%;
+        font-weight: bold;
+
+
+    }
+
+    .tennisNL-chapeau {
+        width: 100%;
+        height: 100%;
+
+
+        height: auto;
+        padding: 1%;
+        text-align: center;
+
+        font-style: italic;
+
+
+    }
+
+    .tennisNL-articles-flexer img {
+        width: 100%;
+        height: 100%;
+        max-width: 550px;
+        height: auto;
+        padding: 1%;
+
+    }
+
+    .tennisNL-only-text-cards {
+
+
+        border-width: 2px;
+        border-style: solid;
+        border-color: seagreen;
+        background-color: blue;
+        margin-left: 11%;
+        margin-right: 11%;
+
+    }
+
+    .tennisNL-only-text-cards a {
+        text-decoration: none;
+        color: white;
+    }
+
+    .tennisNL-only-text-wrapper {
+
+        padding-bottom: 2%
+    }
+
+    .tennisNL-other-articles {
+        background-color: white;
+        text-align: center;
+        font-size: 200%;
+        font-weight: bold;
+        margin-left: 11%;
+        margin-right: 11%;
+        margin-top: 2%;
+        padding-top: 1%;
+        padding-bottom: 1%;
+    }
 }
 
+@media only screen and (max-width: 420px) {
+
+    .tennisNL-wrapper {
+        width: 100%;
+        clear: both;
 
 
-.tennisNL-Daan-picture img {
-    border-radius: 10%;
-    width: 100%;
+    }
 
-}
+    .tennisNL-information {
+        background-color: white;
 
-.tennisNL-articles-flexer {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
+        padding: 1%;
+        overflow: auto;
+        font-size: 100%;
 
 
-}
+    }
 
-.tennisNL-cards {
-    padding: 1%;
-    border-width: 2px;
-    border-style: solid;
-    border-color: seagreen;
-    background-color: white;
-}
-
-.tennisNL-header {
-    width: 100%;
-    height: 100%;
-
-    height: auto;
-    padding: 1%;
-    text-align: center;
-    font-size: 125%;
-    font-weight: bold;
+    .tennisNL-text {
+        display: block;
+        font-size: 100%;
+    }
 
 
-}
+    .tennisNL-Daan-picture img {
+        border-radius: 10%;
+        width: 100%;
+    }
 
-.tennisNL-chapeau {
-    width: 100%;
-    height: 100%;
+    .tennisNL-articles-flexer {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
 
+    }
 
-    height: auto;
-    padding: 1%;
-    text-align: center;
+    .tennisNL-cards {
+        width: 97%;
+        padding: 1%;
 
-    font-style: italic;
+        border-width: 2px;
+        border-style: solid;
+        border-color: seagreen;
+        background-color: white;
+    }
 
+    .tennisNL-header {
+        width: 100%;
+        height: 100%;
+        height: auto;
+        padding: 1%;
 
-}
+        text-align: center;
+        font-size: 70%;
+        font-weight: bold;
 
-.tennisNL-articles-flexer img {
-    width: 100%;
-    height: 100%;
-    max-width: 550px;
-    height: auto;
-    padding: 1%;
+    }
 
-}
+    .tennisNL-chapeau {
+        width: 100%;
+        height: 100%;
+        height: auto;
+        padding: 1%;
+        text-align: center;
+        font-style: italic;
+    }
 
-.tennisNL-only-text-cards {
+    .tennisNL-articles-flexer img {
+        width: 100%;
+        height: 100%;
+        max-width: 550px;
+        height: auto;
+        padding: 1%;
 
+    }
 
-    border-width: 2px;
-    border-style: solid;
-    border-color: seagreen;
-    background-color: blue;
-    margin-left: 11%;
-    margin-right: 11%;
+    .tennisNL-only-text-cards {
+        border-width: 2px;
+        border-style: solid;
+        border-color: seagreen;
+        background-color: blue;
+        margin-left: 11%;
+        margin-right: 11%;
 
-}
+    }
 
-.tennisNL-only-text-cards a {
-    text-decoration: none;
-    color: white;
-}
+    .tennisNL-only-text-cards a {
+        text-decoration: none;
+        color: white;
+    }
 
-.tennisNL-only-text-wrapper {
+    .tennisNL-only-text-wrapper {
 
-    padding-bottom: 2%
-}
+        padding-bottom: 2%
+    }
 
-.tennisNL-other-articles {
-    background-color: white;
-    text-align: center;
-    font-size: 200%;
-    font-weight: bold;
-    margin-left: 11%;
-    margin-right: 11%;
-    margin-top: 2%;
-    padding-top: 1%;
-    padding-bottom: 1%;
+    .tennisNL-other-articles {
+        background-color: white;
+        text-align: center;
+        font-size: 125%;
+        font-weight: bold;
+        margin-left: 11%;
+        margin-right: 11%;
+        margin-top: 2%;
+        padding-top: 1%;
+        padding-bottom: 1%;
+    }
 }
