--- a/client/src/CSS/Home.css
+++ b/client/src/CSS/Home.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 420px) {
+@media only screen and (min-width: 768x) {
 
     @keyframes slideInFromLeft {
         0% {
@@ -47,7 +47,7 @@
 
 }
 
-@media only screen and (max-width: 420px) {
+@media only screen and (max-width: 767px) {
     @keyframes slideInFromLeft {
         0% {
             transform: translateX(-25%);
@@ -61,7 +61,7 @@
     .home-wrapper {
         background-color: white;
         height: auto;
-        max-width: 420px;
+        max-width: 767px;
     }
 
     .home-introduction img {
