--- a/client/src/CSS/Resume.css
+++ b/client/src/CSS/Resume.css
@@ -1,61 +1,22 @@
-@media only screen and (min-width: 421px) {
+@media only screen and (min-width: 768px) {
 
-    .resume-wrapper-extralarge {
 
+    .resume-wrapper {
 
         background-color: white;
         grid-template-columns: 32% 67.9% 0.1%;
 
-        grid-template-rows: 2% 96% 2%;
+        grid-template-rows: 2% auto 2%;
 
-        min-height: 6000px;
+        height: auto;
         font-size: 120%;
 
 
 
 
         display: grid;
-
     }
 
-    .resume-wrapper-large {
-
-
-        background-color: white;
-        grid-template-columns: 32% 67.9% 0.1%;
-
-        grid-template-rows: 2% 96% 2%;
-
-        min-height: 5200px;
-        font-size: 120%;
-
-
-
-
-        display: grid;
-
-    }
-
-
-    .resume-wrapper-small {
-
-
-        background-color: white;
-        grid-template-columns: 32% 67.9% 0.1%;
-
-        grid-template-rows: 2% 96% 2%;
-
-
-
-        min-height: 4200px;
-        font-size: 120%;
-
-
-
-
-        display: grid;
-
-    }
 
 
     .resume-top {
@@ -580,65 +541,17 @@
     }
 }
 
-@media only screen and (max-width: 420px) {
+@media only screen and (max-width: 767px) {
 
-    .resume-wrapper-extralarge {
-
-
-        background-color: white;
-        grid-template-columns: 32% 67.9% 0.1%;
-
-        grid-template-rows: 2% 96% 2%;
-
-        min-height: 6000px;
-        font-size: 50%;
-
-
-
-
-        display: grid;
-
-    }
-
-    .resume-wrapper-large {
-
+    .resume-wrapper {
 
         background-color: white;
         grid-template-columns: 32% 67.9% 0.1%;
-
-        grid-template-rows: 2% 96% 2%;
-
-        min-height: 5200px;
+        grid-template-rows: 2% auto 2%;
+        height: auto;
         font-size: 50%;
-
-
-
-
         display: grid;
-
     }
-
-
-    .resume-wrapper-small {
-
-
-        background-color: white;
-        grid-template-columns: 32% 67.9% 0.1%;
-
-        grid-template-rows: 2% 96% 2%;
-
-
-
-        min-height: 4200px;
-        font-size: 50%;
-
-
-
-
-        display: grid;
-
-    }
-
 
     .resume-top {
         background-color: green;
@@ -687,6 +600,8 @@
 
     .resume-leftside-header {
         color: orange;
+        font-size: 125%;
+
 
     }
 
@@ -799,21 +714,21 @@
 
     .resume-daanfoto-wrapper {
         display: flex;
+        flex-wrap: nowrap;
         margin-top: 3%;
     }
 
     .resume-daanfoto {
-        width: 20%;
+        width: 30%;
+        height: 30%;
         border-radius: 100%;
 
 
     }
 
 
-
     .resume-introduction {
         margin-left: 2%;
-        /* margin-top: 2%; */
         color: navy;
     }
 
@@ -926,18 +841,25 @@
         font-weight: bold;
     }
 
-    .resume-book-wrapper {
-        /* display: grid; */
+    .resume-book-and-bookinfo-wrapper {
         width: 100%;
-        height: 350px;
-        grid-template-columns: 35% 20% 45%;
+
+    }
+
+
+
+
+    .resume-book-wrapper {
+
+        display: flex;
 
     }
 
 
     .resume-book-front img {
+
         width: 100%;
-        height: 60%;
+        height: 100%;
 
         border-style: solid;
         border-width: 1px;
@@ -949,8 +871,9 @@
 
     .resume-flip-box {
         background-color: transparent;
+
         width: 100%;
-        height: 450px;
+        height: 150px;
         border: 1px solid #f1f1f1;
         perspective: 1000px;
         grid-column-start: 1;
@@ -995,16 +918,12 @@
     }
 
     .resume-book-more-info {
-
-        grid-column-start: 3;
-        grid-column-end: 4;
+        width: 100%;
         height: 50%;
         color: maroon;
-        padding: 5%;
+        padding: 2%;
         margin-left: 3%;
-        margin-top: 2%;
         background-color: #FFD9B2;
-        border-radius: 10%;
         font-size: 90%;
 
     }
