--- a/client/src/CSS/App.css
+++ b/client/src/CSS/App.css
@@ -3,7 +3,7 @@ body {
   background-color: lightblue;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1101px) {
   .App {
     grid-template-rows: 80px 97.5%;
     grid-template-columns: 10% 80% 10%;
@@ -25,6 +25,47 @@ body {
     top: 0;
     left: 10%;
     right: 10%;
+    z-index: 1;
+
+
+  }
+
+
+  .main {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    height: 100%;
+    width: 100%;
+
+
+
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1100px) {
+  .App {
+    grid-template-rows: 80px 97.5%;
+    grid-template-columns: 10% 80% 10%;
+    display: grid;
+
+  }
+
+
+
+  nav {
+
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    background-color: black;
+    position: fixed;
+    left: 10%;
+    right: 10%;
+    top: 0;
+
     z-index: 1;
 
 
