--- a/client/src/CSS/Contact.css
+++ b/client/src/CSS/Contact.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1101px) {
     .contact-introduction {
 
         background-color: white;
@@ -130,6 +130,158 @@
 
     .contact-direct-email-text {
         font-size: 125%;
+        padding: 2%;
+
+    }
+
+    .contact-background-below {
+        background-color: white;
+        padding: 4%;
+
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1100px) {
+    .contact-introduction {
+
+        background-color: white;
+        padding: 4%;
+
+        font-size: 125%;
+        color: black;
+
+    }
+
+    .contact {
+        margin: 0;
+
+    }
+
+    .contact-wrapper {
+        background-color: white;
+        height: auto;
+        background-color: teal;
+
+        padding-top: 2%;
+        padding-bottom: 2%;
+
+    }
+
+
+
+
+
+    .introduction-content {
+        display: flex;
+        justify-content: center;
+        padding: 2%;
+    }
+
+    .contact {
+        background-color: black;
+        color: white;
+        display: flex;
+        justify-content: flex-end;
+
+        width: 100%;
+
+    }
+
+    .contact-form-wrapper {
+        width: 100%;
+        padding: 2%;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+
+
+    }
+
+    form input {
+        width: 50%;
+    }
+
+    form textarea {
+        width: 50%;
+        height: 100px;
+
+    }
+
+    .submit-button {
+        width: 10%;
+    }
+
+
+    .contact-direct-wrapper {
+        padding: 2%;
+        background-color: white;
+        border-style: solid;
+        border-width: 4px;
+        border-color: black;
+        width: 60%;
+
+
+    }
+
+
+    .contact-form-header {
+        padding-bottom: 2%;
+        font-size: 125%;
+    }
+
+    .contact-direct-header {
+        padding-bottom: 2%;
+        font-size: 125%;
+        color: black;
+    }
+
+    .contact-direct-phone {
+        display: flex;
+        justify-content: flex-start;
+        color: black;
+
+    }
+
+    .contact-direct-phone-width {
+        width: 10%;
+
+    }
+
+    .contact-direct-phone-text {
+        font-size: 100%;
+        padding: 2%;
+
+    }
+
+
+    .contact-direct-phone img {
+        width: 100%;
+    }
+
+
+    .contact-direct-email {
+        display: flex;
+        justify-content: flex-start;
+        color: black;
+    }
+
+    .contact-direct-email-width {
+        width: 10%;
+
+    }
+
+    .contact-direct-email img {
+        width: 100%;
+    }
+
+    .contact-direct-email div {
+        width: 10%;
+    }
+
+    .contact-direct-email-text {
+        font-size: 100%;
         padding: 2%;
 
     }
