--- a/client/src/CSS/ITProjects.css
+++ b/client/src/CSS/ITProjects.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1101px) {
 
     .projects-wrapper {
         display: flex;
@@ -18,6 +18,108 @@
 
 
     .projects img {
+        width: 100%;
+        border-radius: 10%;
+        border-style: solid;
+        border-width: 1px;
+        border-color: blue;
+    }
+
+
+    .flip-box {
+        height: 100%;
+        width: 30%;
+        padding: 2%
+    }
+
+    .flip-box:hover {
+        background-color: cadetblue;
+        border-radius: 10%;
+
+    }
+
+    .project-title {
+        font-size: 125%;
+    }
+
+    .flip-box:hover .project-title {
+        display: none
+    }
+
+    .flip-box {
+        background-color: transparent;
+        width: 400px;
+        height: 300px;
+        border: 1px solid #f1f1f1;
+        perspective: 1000px;
+        margin-bottom: 5%;
+    }
+
+    .flip-box-inner {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: transform 0.8s;
+        transform-style: preserve-3d;
+    }
+
+    .flip-box:hover .flip-box-inner {
+        transform: rotateY(180deg);
+
+    }
+
+    .flip-box-front,
+    .flip-box-back {
+        position: absolute;
+        padding: 2%;
+        width: 100%;
+        height: 100%;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+        text-align: left;
+    }
+
+
+
+    .tech-used {
+        font-weight: bold;
+    }
+
+    .flip-box-front {
+
+        color: black;
+    }
+
+    .flip-box-back {
+        background-color: dodgerblue;
+        color: white;
+        transform: rotateY(180deg);
+    }
+}
+
+
+@media only screen and (min-width: 768px) and (max-width: 1100px) {
+
+    .projects-wrapper {
+        display: flex;
+        /* flex-direction: row; */
+        justify-content: center;
+        flex-wrap: wrap;
+        height: auto;
+
+        border-style: solid;
+        border-width: 2px;
+        border-color: teal;
+        background-color: white;
+        padding-top: 2%;
+        padding-bottom: 2%;
+    }
+
+
+
+    .projects img {
+
         width: 100%;
         border-radius: 10%;
         border-style: solid;
