styling for medium sized screens done

--- a/client/src/CSS/DeGouw.css
+++ b/client/src/CSS/DeGouw.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1101px) {
     .DeGouw-wrapper img {
         width: 100%;
 
@@ -96,6 +96,147 @@
         grid-row-start: 5;
         grid-row-end: 6;
         font-size: 175%;
+        color: white;
+        font-weight: bold;
+        text-align: center;
+    }
+
+    .DeGouw-tennisverenigingDeGouwArticlesOtherDisplay {
+        background-color: blue;
+        color: white;
+        padding: 2%;
+
+
+
+        grid-column-start: 1;
+        grid-column-end: 5;
+        grid-row-start: 6;
+        grid-row-end: 7;
+        overflow: hidden;
+
+
+    }
+
+    .DeGouw-clubhouse {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 7;
+        grid-row-end: 8;
+    }
+
+
+    .DeGouw-scoreboards {
+        grid-column-start: 3;
+        grid-column-end: 5;
+        grid-row-start: 7;
+        grid-row-end: 8;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1100px) {
+    .DeGouw-wrapper img {
+        width: 100%;
+
+    }
+
+    .DeGouw-wrapper {
+        display: grid;
+        grid-template-columns: 1% 49% 49% 1%;
+        grid-template-rows: 8% 2% 23% 23 2% 23% 23%;
+
+        width: 100%;
+
+    }
+
+    .DeGouw-information {
+        width: 96%;
+        padding: 2%;
+
+        grid-column-start: 1;
+        grid-column-end: 5;
+        grid-row-start: 1;
+        grid-row-end: 2;
+        font-size: 125%;
+        background-color: white;
+
+    }
+
+
+    .DeGouw-championship-cards i,
+    .DeGouw-other-cards i {
+        display: none;
+
+
+    }
+
+
+
+    .DeGouw-championship-cards,
+    .DeGouw-other-cards {
+        padding: 1%;
+        font-size: 125%;
+    }
+
+
+    .DeGouw-championship-cards a,
+    .DeGouw-other-cards a {
+        color: white;
+        text-decoration: none;
+
+    }
+
+    .DeGouw-championship-articles-header {
+        background-color: black;
+        padding: 2%;
+
+        grid-column-start: 1;
+        grid-column-end: 5;
+        grid-row-start: 2;
+        grid-row-end: 3;
+        font-size: 150%;
+        color: white;
+        font-weight: bold;
+        text-align: center;
+    }
+
+    .DeGouw-tennisverenigingDeGouwArticlesChampionshipDisplay {
+
+        background-color: blue;
+        color: white;
+        padding: 2%;
+
+        grid-column-start: 1;
+        grid-column-end: 5;
+        grid-row-start: 3;
+        grid-row-end: 4;
+
+
+    }
+
+    .DeGouw-competition {
+        grid-column-start: 3;
+        grid-column-end: 5;
+        grid-row-start: 4;
+        grid-row-end: 5;
+    }
+
+    .DeGouw-NienkeDeJong-action {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 4;
+        grid-row-end: 5;
+
+    }
+
+    .DeGouw-other-articles-header {
+        background-color: black;
+        padding: 2%;
+
+        grid-column-start: 1;
+        grid-column-end: 5;
+        grid-row-start: 5;
+        grid-row-end: 6;
+        font-size: 150%;
         color: white;
         font-weight: bold;
         text-align: center;
