--- a/client/src/CSS/LocalArticles.css
+++ b/client/src/CSS/LocalArticles.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1101px) {
 
     .localArticles-wrapper {
         width: 100%;
@@ -13,25 +13,49 @@
         width: 100%;
         background-color: white;
 
+    }
 
+    .searchbar-and-selectbar-wrapper {
+        display: flex;
+        width: 100%;
     }
 
     .localArticles-searchbar {
+        width: 50%;
+        display: grid;
+        grid-template-columns: 25% 75%;
         background-color: maroon;
-        height: 50px;
-        width: 100%;
-        text-align: center;
-        margin: 0 auto;
-
-        padding-top: 2%;
+        height: 30px;
+        padding: 2%;
         color: white;
+
         font-size: 125%;
 
 
     }
 
     .localArticles-searchbar input {
-        margin-left: 1%;
+        margin-left: 15%;
+
+    }
+
+
+    .localArticles-selectbar {
+        width: 50%;
+        display: grid;
+        grid-template-columns: 25% 75%;
+        background-color: maroon;
+        height: 30px;
+        padding: 2%;
+        color: white;
+        font-size: 125%;
+
+    }
+
+    .localArticles-selectbar select {
+        margin-left: 15%;
+        width: 50%;
+
     }
 
     .localArticles-cards {
@@ -94,19 +118,122 @@
 
 
 
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1100px) {
+
+    .localArticles-wrapper {
+        width: 100%;
+    }
+
+    .localArticles-searchbar {
+        display: grid;
+        grid-template-columns: 25% 75%;
+        background-color: maroon;
+        height: 15px;
+        padding: 2%;
+        color: white;
+        font-size: 100%;
+
+
+    }
+
+    .localArticles-searchbar input {
+        margin-left: 9%;
+        width: 40%;
+    }
+
+
     .localArticles-selectbar {
-        display: inline;
-        margin-left: 2%;
+        display: grid;
+        grid-template-columns: 25% 75%;
+        background-color: maroon;
+        height: 15px;
+        padding: 2%;
+        color: white;
+        font-size: 100%;
+
     }
 
     .localArticles-selectbar select {
-        margin-left: 0.5%;
+        margin-left: 9%;
+        width: 41%;
     }
+
+    .localArticles-flexer {
+        display: flex;
+
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+        background-color: white;
+
+
+    }
+
+    .localArticles-cards {
+        padding: 1%;
+        border-width: 2px;
+        border-style: solid;
+        border-color: pink;
+        background-color: white;
+    }
+
+    .localArticles-header {
+        width: 100%;
+        height: 100%;
+
+        height: auto;
+        padding: 1%;
+        text-align: center;
+        font-size: 125%;
+        font-weight: bold;
+
+
+    }
+
+    .localArticles-chapeau {
+        width: 100%;
+        height: 100%;
+
+        height: auto;
+        padding: 1%;
+        text-align: center;
+
+        font-style: italic;
+
+
+    }
+
+    .localArticles-flexer img {
+        width: 100%;
+        height: 100%;
+        max-width: 650px;
+        height: auto;
+        padding: 1%;
+
+    }
+
+    .localarticles-no-articles {
+        height: 100vh;
+        background-color: teal;
+        width: 100%;
+
+    }
+
+    .localarticles-no-articles-text {
+        text-align: center;
+        color: white;
+        font-size: 300%;
+        margin-top: 20%;
+        font-weight: bold;
+    }
+
+
 }
 
-
-
-@media only screen and (max-width: 420px) {
+@media only screen and (max-width: 767px) {
 
     .localArticles-wrapper {
         width: 100%;
@@ -124,25 +251,30 @@
 
     }
 
-    .localArticles-searchbar {
+    .localArticles-searchbar,
+    .localArticles-selectbar {
+        display: grid;
+        grid-template-columns: 35% 65%;
         background-color: maroon;
-        height: 50px;
-
-        width: 100%;
-        text-align: center;
-        margin: 0 auto;
-
-        padding-top: 5%;
-        padding-bottom: 10%;
+        height: 30px;
+        padding: 2%;
         color: white;
-        font-size: 100%;
+        font-size: 70%;
 
 
     }
 
     .localArticles-searchbar input {
-        margin-left: 9%;
-        width: 45%;
+        margin-left: 20%;
+        height: 20px;
+        width: 60%;
+    }
+
+
+    .localArticles-selectbar select {
+        margin-left: 20%;
+        width: 62%;
+        height: 20px;
     }
 
     .localArticles-cards {
@@ -200,13 +332,4 @@
         font-weight: bold;
     }
 
-    .localArticles-selectbar {
-        margin-top: 5%;
-        padding-bottom: 5%;
-    }
-
-    .localArticles-selectbar select {
-        margin-left: 4%;
-        width: 46%;
-    }
 }
