--- a/client/src/CSS/Resume.css
+++ b/client/src/CSS/Resume.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1101px) {
 
 
     .resume-wrapper {
@@ -540,6 +540,552 @@
         color: navy;
     }
 }
+
+@media only screen and (min-width: 768px) and (max-width: 1100px) {
+
+
+    .resume-wrapper {
+
+        background-color: white;
+        grid-template-columns: 32% 67.9% 0.1%;
+
+        grid-template-rows: 2% auto 2%;
+
+        height: auto;
+        font-size: 70%;
+
+
+
+
+        display: grid;
+    }
+
+
+
+    .resume-top {
+        background-color: green;
+        grid-row-start: 1;
+        grid-row-end: 2;
+        grid-column-start: 1;
+        grid-column-end: 3;
+        display: flex;
+        justify-content: flex-end;
+        padding-right: 5%;
+        align-items: center;
+
+    }
+
+    .resume-top div {
+        margin-left: 2%;
+    }
+
+    .resume-english,
+    .resume-dutch {
+        background-color: red;
+        border-radius: 5%;
+
+        font-weight: bold;
+    }
+
+    .resume-english a,
+    .resume-dutch a {
+        color: white;
+        text-decoration: none;
+
+    }
+
+    .resume-left {
+        background-color: green;
+        color: white;
+
+        padding-left: 5%;
+        padding-right: 2%;
+
+        grid-row-start: 2;
+        grid-row-end: 3;
+        grid-column-start: 1;
+        grid-column-end: 2;
+    }
+
+    .resume-leftside-header {
+        color: orange;
+        font-size: 125%;
+
+    }
+
+    .resume-contact-wrapper,
+    .resume-computer-knowledge-wrapper {
+        font-size: 100%;
+
+    }
+
+
+    .resume-contact-icon {
+        width: 6%;
+        margin-right: 5%;
+    }
+
+    .resume-contact-wrapper img {
+        width: 100%;
+    }
+
+    .resume-contact-flexer {
+        display: flex;
+
+    }
+
+    .resume-tech-wrapper {
+        font-size: 100%;
+
+    }
+
+    .resume-tech-flexer {
+        display: flex;
+
+    }
+
+    .resume-tech {
+        width: 45%;
+        margin-right: 5%;
+    }
+
+    .resume-soft-skills-wrapper {
+        font-size: 100%;
+    }
+
+    .resume-courses-wrapper {
+        font-size: 100%;
+    }
+
+    .resume-hobbies-interests-wrapper {
+        font-size: 100%;
+
+    }
+
+
+    .resume-hobbies-interests-icon {
+        width: 6%;
+        margin-right: 5%;
+    }
+
+    .resume-hobbies-interests-wrapper img {
+        width: 100%;
+    }
+
+    .resume-hobbies-interests-flexer {
+        display: flex;
+
+    }
+
+    .resume-right {
+        background-color: white;
+        grid-row-start: 2;
+        grid-row-end: 3;
+        grid-column-start: 2;
+        grid-column-end: 3;
+        padding: 2%;
+
+
+    }
+
+    .resume-bottom {
+        background-color: green;
+        grid-row-start: 3;
+        grid-row-end: 4;
+        grid-column-start: 1;
+        grid-column-end: 3;
+
+    }
+
+    .resume-right-line {
+        background-color: green;
+        grid-row-start: 1;
+        grid-row-end: 4;
+        grid-column-start: 3;
+        grid-column-end: 4;
+
+    }
+
+    .resume-name {
+
+        font-size: 2em;
+        text-align: center;
+        color: green;
+        font-weight: bold;
+    }
+
+    .resume-profession {
+        font-size: 1.5em;
+        text-align: center;
+        color: green;
+    }
+
+    .resume-daanfoto-wrapper {
+        display: flex;
+        margin-top: 3%;
+    }
+
+    .resume-daanfoto {
+        width: 20%;
+        border-radius: 100%;
+
+
+    }
+
+
+
+    .resume-introduction {
+        margin-left: 2%;
+        /* margin-top: 2%; */
+        color: navy;
+    }
+
+    .resume-career-summary-heading {
+        font-size: 1.5em;
+        color: green;
+        font-weight: bold;
+        text-decoration: underline;
+        text-align: center;
+        margin-left: 2%;
+        margin-top: 5%;
+    }
+
+    .resume-jobinfo-wrapper {
+        display: flex;
+
+
+
+    }
+
+    .resume-bold {
+
+        font-weight: bold;
+
+
+    }
+
+    .resume-margin {
+        width: 32%;
+    }
+
+    .resume-italic {
+        font-style: italic;
+    }
+
+    .resume-jobinfo {
+        width: 70%;
+
+
+    }
+
+    .resume-coding-projects {
+        text-align: center;
+
+        font-weight: bold;
+        font-size: 1.4em;
+    }
+
+
+    .resume-project-links {
+        color: coral;
+    }
+
+    .resume-career-summary-wrapper {
+        color: navy;
+
+
+    }
+
+    .resume-green-header {
+        color: green;
+        font-size: 125%;
+        text-align: center;
+        font-weight: bold;
+
+    }
+
+    .resume-more-past-experience,
+    .resume-language-courses {
+        text-align: center;
+        font-size: 125%;
+        color: red;
+        font-weight: bold;
+    }
+
+
+
+    .resume-master-economics-more-info,
+    .resume-master-journalism-more-info,
+    .resume-bachelor-economics-more-info {
+        display: flex;
+        background-color: red;
+        width: 100%;
+        margin-bottom: 2.5%;
+
+    }
+
+    .resume-master-economics-more-info img,
+    .resume-master-journalism-more-info img,
+    .resume-bachelor-economics-more-info img {
+        width: 35%;
+
+        /* border-radius: 10%; */
+    }
+
+    .resume-master-economics-thesis,
+    .resume-master-journalism-thesis,
+    .resume-bachelor-economics-thesis {
+        background-color: darkred;
+        color: white;
+        width: 100%;
+        padding: 2%;
+
+    }
+
+    .resume-master-economics-thesis a,
+    .resume-master-journalism-thesis a,
+    .resume-bachelor-economics-thesis a {
+        color: white;
+        font-weight: bold;
+    }
+
+    .resume-book-wrapper {
+        display: grid;
+        width: 100%;
+        height: 100%;
+        grid-template-columns: 20% 20% 60%;
+
+    }
+
+
+    .resume-book-front img {
+        width: 100%;
+        height: 100%;
+
+        border-style: solid;
+        border-width: 1px;
+        border-color: blue;
+    }
+
+
+
+
+    .resume-flip-box {
+        background-color: transparent;
+        width: 100%;
+        height: 450px;
+        border: 1px solid #f1f1f1;
+        perspective: 1000px;
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+
+    .resume-flip-box-inner {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: transform 0.8s;
+        transform-style: preserve-3d;
+    }
+
+    .resume-flip-box:hover .resume-flip-box-inner {
+        transform: rotateY(180deg);
+    }
+
+    .resume-flip-box-front,
+    .resume-flip-box-back {
+        position: absolute;
+        padding: 2%;
+        width: 100%;
+        height: 100%;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+        text-align: left;
+    }
+
+
+
+    .resume-flip-box-front {
+
+        color: black;
+    }
+
+    .resume-flip-box-back {
+
+        color: white;
+        transform: rotateY(180deg);
+    }
+
+    .resume-book-more-info {
+
+        grid-column-start: 3;
+        grid-column-end: 4;
+        color: maroon;
+        padding: 5%;
+        margin-left: 3%;
+        margin-top: 2%;
+        background-color: #FFD9B2;
+
+        font-size: 90%;
+
+    }
+
+    .resume-book-more-info a {
+        text-decoration: none;
+    }
+
+    .resume-language-level-wrapper {
+        display: grid;
+        grid-template-rows: 75% 25%;
+        grid-template-columns: 2% 16% 16% 16% 16% 16% 16% 2%;
+        margin-top: 1%;
+
+    }
+
+    .resume-dutch-flag {
+        grid-row-start: 1;
+        grid-row-end: 2;
+        grid-column-start: 2;
+        grid-column-end: 3;
+        margin: 1%;
+
+    }
+
+    .resume-british-flag {
+        grid-row-start: 1;
+        grid-row-end: 2;
+        grid-column-start: 3;
+        grid-column-end: 4;
+        margin: 1%;
+
+    }
+
+    .resume-french-flag {
+        grid-row-start: 1;
+        grid-row-end: 2;
+        grid-column-start: 4;
+        grid-column-end: 5;
+        margin: 1%;
+
+    }
+
+    .resume-italian-flag {
+        grid-row-start: 1;
+        grid-row-end: 2;
+        grid-column-start: 5;
+        grid-column-end: 6;
+        margin: 1%;
+
+    }
+
+    .resume-spanish-flag {
+        grid-row-start: 1;
+        grid-row-end: 2;
+        grid-column-start: 6;
+        grid-column-end: 7;
+        margin: 1%;
+    }
+
+    .resume-german-flag {
+        grid-row-start: 1;
+        grid-row-end: 2;
+        grid-column-start: 7;
+        grid-column-end: 8;
+        margin: 1%;
+
+    }
+
+    .resume-dutch-flag img,
+    .resume-british-flag img,
+    .resume-french-flag img,
+    .resume-italian-flag img,
+    .resume-spanish-flag img,
+    .resume-german-flag img {
+        width: 100%;
+    }
+
+
+    .resume-dutch-star {
+        grid-row-start: 2;
+        grid-row-end: 3;
+        grid-column-start: 2;
+        grid-column-end: 3;
+        margin: 1%;
+
+    }
+
+    .resume-british-star {
+        grid-row-start: 2;
+        grid-row-end: 3;
+        grid-column-start: 3;
+        grid-column-end: 4;
+        margin: 1%;
+
+    }
+
+    .resume-french-star {
+        grid-row-start: 2;
+        grid-row-end: 3;
+        grid-column-start: 4;
+        grid-column-end: 5;
+        margin: 1%;
+
+    }
+
+    .resume-italian-star {
+        grid-row-start: 2;
+        grid-row-end: 3;
+        grid-column-start: 5;
+        grid-column-end: 6;
+        margin: 1%;
+
+    }
+
+    .resume-spanish-star {
+        grid-row-start: 2;
+        grid-row-end: 3;
+        grid-column-start: 6;
+        grid-column-end: 7;
+        margin: 1%;
+    }
+
+    .resume-german-star {
+        grid-row-start: 2;
+        grid-row-end: 3;
+        grid-column-start: 7;
+        grid-column-end: 8;
+        margin: 1%;
+
+    }
+
+    .resume-dutch-star img,
+    .resume-british-star img,
+    .resume-french-star img,
+    .resume-italian-star img,
+    .resume-spanish-star img,
+    .resume-german-star img {
+        width: 100%;
+    }
+
+
+
+    .resume-language-level-star {
+        grid-row-start: 2;
+        grid-row-end: 3;
+        grid-column-start: 2;
+        grid-column-end: 8;
+    }
+
+    .resume-language-level-star img {
+        width: 15%;
+    }
+
+    .resume-other-activities {
+        color: navy;
+    }
+}
+
 
 @media only screen and (max-width: 767px) {
 
