--- a/client/src/CSS/TennisNL.css
+++ b/client/src/CSS/TennisNL.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1101px) {
 
     .tennisNL-wrapper {
         background: url("../pictures/grass.jpg");
@@ -13,28 +13,11 @@
         padding: 1%;
         overflow: auto;
         font-size: 100%;
-
-
     }
 
-    /* .tennisNL-Daan-picture {
-    width: 18%;
-
-    float: left;
-    position: relative;
-    margin-right: 2%;
-
-}*/
-
-
-
     .tennisNL-text {
-
         display: block;
         font-size: 125%;
-
-
-
     }
 
 
@@ -132,6 +115,126 @@
         padding-bottom: 1%;
     }
 }
+
+@media only screen and (min-width: 768px) and (max-width: 1100px) {
+
+    .tennisNL-wrapper {
+        background: url("../pictures/grass.jpg");
+        clear: both;
+
+
+    }
+
+    .tennisNL-information {
+        background-color: white;
+        margin-bottom: 2%;
+        padding: 1%;
+        overflow: auto;
+        font-size: 100%;
+    }
+
+    .tennisNL-text {
+        display: block;
+        font-size: 125%;
+    }
+
+
+
+    .tennisNL-Daan-picture img {
+        border-radius: 10%;
+        width: 100%;
+
+    }
+
+    .tennisNL-articles-flexer {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
+
+
+    }
+
+    .tennisNL-cards {
+        padding: 1%;
+        border-width: 2px;
+        border-style: solid;
+        border-color: seagreen;
+        background-color: white;
+    }
+
+    .tennisNL-header {
+        width: 100%;
+        height: 100%;
+
+        height: auto;
+        padding: 1%;
+        text-align: center;
+        font-size: 90%;
+        font-weight: bold;
+
+
+    }
+
+    .tennisNL-chapeau {
+        width: 100%;
+        height: 100%;
+
+
+        height: auto;
+        padding: 1%;
+        text-align: center;
+
+        font-style: italic;
+
+
+    }
+
+    .tennisNL-articles-flexer img {
+        width: 100%;
+        height: 100%;
+        max-width: 550px;
+        height: auto;
+        padding: 1%;
+
+    }
+
+    .tennisNL-only-text-cards {
+
+
+        border-width: 2px;
+        border-style: solid;
+        border-color: seagreen;
+        background-color: blue;
+        margin-left: 5%;
+        margin-right: 5%;
+
+    }
+
+    .tennisNL-only-text-cards a {
+        text-decoration: none;
+        color: white;
+    }
+
+    .tennisNL-only-text-wrapper {
+
+        padding-bottom: 2%;
+
+    }
+
+    .tennisNL-other-articles {
+        background-color: white;
+        text-align: center;
+        font-size: 150%;
+        font-weight: bold;
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-top: 2%;
+        padding-top: 1%;
+        padding-bottom: 1%;
+    }
+}
+
 
 @media only screen and (max-width: 767px) {
 
